# chalmers-qubit

./: .gitignore  404.html  LICENSE  README.md  index.html  mkdocs.yml  setup.cfg  setup.py  tox.ini
.github/workflows/: documentation.yml  python-app.yml  tests.yml
bibliography/: references.bib
chalmers-qubit/: __init__.py  chalmerscompiler.py  chalmersprocessor.py  operations.py
chalmers_qubit/: __init__.py  processor.py
chalmers_qubit/base/: __init__.py  compiler.py  gates.py  model.py  noise.py  operations.py  processor.py
chalmers_qubit/ratatosk/: README.md  compiler.py  model.py  processor.py
chalmers_qubit/sarimner/: README.md  __init__.py  compiler.py  model.py  noise.py  processor.py  scheduler.py
doc/notebooks/: avgerage_gate_fidelty.ipynb  gates.ipynb
doc/notebooks/ratatosk/: avgerage_gate_fidelty.ipynb  relaxation.ipynb
doc/notebooks/sarimner/: relaxation.ipynb
docs/: index.md  theory.md
docs/source/: conf.py  index.rst  installation.rst  introduction.rst
examples/: quantum_gates.ipynb  relaxation.ipynb
search/: search_index.json
tests/: avgerage_gate_fidelty.ipynb  gates.ipynb  relaxation.ipynb  test.py  test_gates.py  test_model.py  test_noise.py  test_processor.py
tests/sarimner/: test_processor.py
theory/: index.html
