[metadata]
# Replace these values with your package's information
name = chalmers_qubit
version = 0.1.0
author = Pontus Vikstål, Kamanasish Debnath, Shahnawaz Ahmed
author_email = vikstal@chalmers.se
description = A simulator of the Chalmers device to be used with qutip-qip
long_description = file: README.md
long_description_content_type = text/markdown
license = BSD 3-Clause Licence
license_file = LICENSE.txt
classifiers =
    Programming Language :: Python :: 3.9
    License :: OSI Approved :: BSD 3-Clause License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.9
zip_safe = False
install_requires =
    qutip
    qutip-qip
    qutip-qtrl

[options.extras_require]
graphics = matplotlib
tests = 
    flake8
full =
    %(graphics)s
    %(tests)s